--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -18,12 +18,36 @@
                         You must provide confirmation from a building expert, contractor or structural engineer that your roof can support solar PV panels for your full application. Confirmation is not funded by this grant.
                     </p>
 
+                    <p class="govuk-hint">
+                        Your roof is exempt if:
+                    </p>
+
+                    <ul class="govuk-hint govuk-list govuk-list--bullet">
+                        <li>
+                            the building is listed
+                        </li>
+                        <li>
+                            the building is on a World Heritage Site
+                        </li>
+                        <li>
+                            you're upgrading an existing building and would not otherwise make changes to the roof
+                        </li>
+                        <li>
+                            the roof faces only north
+                        </li>
+                        <li>
+                            the roof is heavily shaded
+                        </li>
+                        <li>
+                            the roof does not have 100m2 of clear roof space
+                        </li>
+                    </ul>
+
                 {% endset %}
 
                 {{ govukRadios ({
                     idPrefix: 'roof-support-for-solar-pv',
                     name: 'roof-support-for-solar-pv',
-                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will the roof of the building be able to support solar PV panels?',
@@ -48,7 +72,18 @@
                             value: 'No',
                             checked: true if data['roof-support-for-solar-pv'] == 'No',
                             attributes: {
-                                    'data-next': 'exemptions'
+                                    'data-next': 'elim-roof-support-for-solar-pv'
+                                }
+                        },
+                        {    divider: 'or'
+
+                        },
+                        {
+                            text: 'My roof is exempt',
+                            value: 'My roof is exempt',
+                            checked: true if data['roof-support-for-solar-pv'] == 'My roof is exempt',
+                            attributes: {
+                                    'data-next': 'solar-pv-system'
                                 }
                         }
                     ]
