--- a/app/views/layinghens/current/scoring/grip.html
+++ b/app/views/layinghens/current/scoring/grip.html
@@ -33,7 +33,7 @@
                         }
                     },
                     hint: {
-                        text: 'For example, sufficient grip size or a comfortable material coating'
+                        text: 'Additional design features (for example, a ridged surface, comfortable material or coating) you can add to the circular metal perches that are often standard in aviary systems'
                     },
                     items: [
                         {
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to support projects which provide perches that are easy to grip to increase bird safety and reduce falls. 
+                    RPA want to support projects that ensure perches are easy to grip to increase bird safety and reduce falls.  
                 </p>
             </div>
 
