--- a/app/views/layinghens/current/scoring/interruption.html
+++ b/app/views/layinghens/current/scoring/interruption.html
@@ -11,19 +11,15 @@
             <div class="govuk-grid-column-two-thirds">
 
                 <h1 class="govuk-heading-l">
-                    Your project meets the minimum criteria to apply for this grant
+                    Your project meets the eligibility criteria to apply for this grant
                 </h1>
 
                 <p>
-                    Based on your answers, your project meets the minimum criteria to apply for this grant.
-                </p>
-
-                <p>
-                    You will now be asked questions that will check how well your project meets the funding priorities.
+                    You are eligible to apply for this grant.
                 </p>
 
                 {{ govukInsetText ({
-                    text: 'Your answers past this point will not stop you from applying.'
+                    text: 'Your answers to the next questions will not change your project’s eligibility.'
                 }) }}
 
                 <h2 class="govuk-heading-m">
@@ -31,7 +27,11 @@
                 </h2>
 
                 <p>
-                    At the end of these questions, your project will be given a score. You can then make changes to see how you could make your application better.
+                    The next questions will score your project against the funding priorities of the grant.
+                </p>
+
+                <p>
+                    Your project will get a score at the end of these questions. You can then make changes to see how you can improve your grant funding application.
                 </p>
                 
                 {{ govukButton ({
