building items sidebar text change

--- a/app/views/layinghens/current/eligibility/building/items.html
+++ b/app/views/layinghens/current/eligibility/building/items.html
@@ -94,7 +94,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    The grant-funded building must have these design features to meet the grant priority of improving biosecurity.
+                    The building must have these design features to meet the grant priority of improving biosecurity.
                 </p>
             </div>
 
