--- a/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
+++ b/app/views/layinghens/current/eligibility/solar/roof-support-for-solar-pv.html
@@ -15,7 +15,7 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        You must provide confirmation from a building expert, contractor or structural engineer that your roof can support solar PV panels for your full application. Confirmation is not funded by this grant.
+                        You must provide confirmation from a building expert, contractor or structural engineer that your roof can support solar PV panels for your full application. This grant does not fund the confirmation.
                     </p>
 
                     <p class="govuk-hint">
@@ -39,7 +39,7 @@
                             the roof is heavily shaded
                         </li>
                         <li>
-                            the roof does not have 100m2 of clear roof space
+                            the roof does not have 100m<sup>2</sup> of clear roof space
                         </li>
                     </ul>
 
@@ -108,30 +108,6 @@
                     <p>
                         The roof must be able to support solar PV panels, allowing for potential use in the future.
                     </p>
-                     <p> 
-                        Your roof is exempt if:
-                    </p>
-
-                    <ul class="govuk-list govuk-list--bullet">
-                        <li>
-                            the building is listed
-                        </li>
-                        <li>
-                            the building is on a World Heritage Site
-                        </li>
-                        <li>
-                            you're upgrading an existing building and would not otherwise make changes to the roof
-                        </li>
-                        <li>
-                            the roof faces only north
-                        </li>
-                        <li>
-                            the roof is heavily shaded
-                        </li>
-                        <li>
-                            the roof does not have 100m<sup>2</sup> of clear roof space
-                        </li>
-                    </ul>
                 </div>
             </div>
 
