--- a/app/views/layinghens/current/eligibility/building/lighting.html
+++ b/app/views/layinghens/current/eligibility/building/lighting.html
@@ -6,7 +6,7 @@
 {% endif %} 
 
 {% block pageTitle %}
-    Will the housing lighting system have these features?  
+    Will the housing lighting system have these features?
 {% endblock %} 
 
 {% block content %}
@@ -43,7 +43,7 @@
                         
                     </li>
                     <li>
-                        an option for red light
+                        an option for red light to reduce feather pecking
                     </li>
                 </ul>
 
@@ -60,7 +60,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the building lighting system have these features? ',
+                            text: 'Will the housing lighting system have these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
