--- a/app/views/layinghens/current/eligibility/common/project-type.html
+++ b/app/views/layinghens/current/eligibility/common/project-type.html
@@ -99,7 +99,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    You can apply for grant funding for either housing projects or veranda projects.
+                    You can apply for grant funding for either building projects or veranda projects.
                 </p>
 
                 <p>
