--- a/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
+++ b/app/views/layinghens/current/eligibility/common/one-thousand-birds.html
@@ -34,9 +34,6 @@
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
-                     hint: {
-                        text: 'This can be laying hens, pullets or both'
-                    },
                     items: [
                         {
                             text: 'Yes',
@@ -73,7 +70,9 @@
                 <h2 class="app-step-nav-related__heading">
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
-                <p>You must have at least 1,000 birds (laying hens, pullets, or both) on your farm currently to be eligible for grant funding.</p>
+                <p>
+                    You must keep at least 1,000 {{ poultryType }}s on your farm currently to be eligible for grant funding.
+                </p>
             </div>
         </div>
 
