--- a/app/views/layinghens/current/scoring/grip.html
+++ b/app/views/layinghens/current/scoring/grip.html
@@ -6,7 +6,7 @@
 {% endif %}
 
 {% block pageTitle %}
-    Will the perches have a design feature that help the {{ poultryType }}s grip the perches?
+    Will the perches have a design feature that help the hens grip the perches?
 {% endblock %}
 
 {% block content %}
@@ -27,13 +27,13 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the perches have a design feature that help the ' + poultryType + 's grip the perches?',
+                            text: 'Will the perches have a design feature that help the hens grip the perches?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
                     },
                     hint: {
-                        text: 'Additional design features (for example, a ridged surface, comfortable material or coating) you can add to the circular metal perches that are often standard in aviary systems'
+                        text: 'You can replace an aviary’s standard circular metal perches with perches that have design features to help birds grip them (for example, a ridged surface, comfortable material or coating)'
                     },
                     items: [
                         {
@@ -64,7 +64,7 @@
                 <span class="app-step-nav-related__pretitle">Funding priorities</span>
                 </h2>
                 <p>
-                    RPA want to support projects that ensure perches are easy to grip to increase bird safety and reduce falls.  
+                    RPA want to support projects that ensure perches are easy to grip to increase bird safety and reduce falls.
                 </p>
             </div>
 
