--- a/app/views/layinghens/current/eligibility/veranda/biosecurity.html
+++ b/app/views/layinghens/current/eligibility/veranda/biosecurity.html
@@ -34,7 +34,7 @@
 
                 {% endset %}
 
-                {% set nextPage = '../biosecurity/concrete-apron' %}
+                {% set nextPage = 'pasture' %}
                 {% if data['project-type'] == 'veranda' %}
                     {% set nextPage = 'project-cost-total' %}
                 {% endif %}
