--- a/app/views/layinghens/current/scoring/veranda-requirements.html
+++ b/app/views/layinghens/current/scoring/veranda-requirements.html
@@ -28,12 +28,15 @@
                 {% set hintHtml %}
 
                     <p class="govuk-hint">
-                        The veranda must:
+                        If you add a veranda to your building, it must:
                     </p>
 
                     <ul class="govuk-hint govuk-list govuk-list--bullet">
                         <li>
                             be 4 metres wide or more along the length of the bird housing area, or 30% or more of the size of the indoor bird housing area footprint
+                        </li>
+                        <li>
+                            have a dimmable LED lighting system with a range between 0 lux and 60 lux
                         </li>
                         <li>
                             have a solid concrete floor and waterproof insulated roof
@@ -42,13 +45,13 @@
                             have a perimeter wall of more than one metre in height
                         </li>
                         <li>
-                            have a dimmable LED lighting system with a range between 0 lux and 60 lux
+                            have closable pop holes within the perimeter wall, unless the veranda forms part of an indoor barn system
                         </li>
                         <li>
-                            have a mesh roller-screen system running underneath the length of the roof, that fits securely against the wall when extended to make the housing biosecure during housing orders
-                        </li>
+                            be surrounded by a continuous concrete apron, unless it has direct access to pasture
                         <li>
-                            have closable pop holes in the wall of the main house (unless the veranda forms part of an indoor barn system) that are less than 30cm from the floor level, or access ramps across the entire pop hole
+                            have closable internal pop holes in the wall of the main house at least 35cm high and 40cm wide, that are less than 30cm from the floor level, or access ramps across the entire pop hole
+                        </li>
                         <li>
                             not have perches in front of the pop holes
                         </li>
@@ -62,7 +65,7 @@
                     classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
-                            text: 'Will the veranda have these features?',
+                            text: 'Will the building have a veranda with these features?',
                             isPageHeading: true,
                             classes: 'govuk-fieldset__legend--l'
                         }
