--- a/app/views/layinghens/current/eligibility/veranda/present-pullet.html
+++ b/app/views/layinghens/current/eligibility/veranda/present-pullet.html
@@ -17,30 +17,10 @@
 
             <form method="post">
 
-                {% set nextPageOnYes = 'specification' %}
-                {% set nextPageOnNo = 'elim-size' %}
-                {% set nextPageOnExempt = '../biosecurity/concrete-apron' %}
-
-                {% set hintHtml %}
-
-                    <p class="govuk-hint">
-                        You are exempt if you do not have space to add a veranda that is either:
-                    </p>
-
-                    <ul class="govuk-list govuk-list--bullet govuk-hint">
-                        <li>
-                            4 metres wide or more along the length of the bird housing area
-                        </li>
-                        <li>
-                            30% or more of the indoor bird housing area footprint
-                        </li>
-                    </ul>
-
-                {% endset %}
-
                 {{ govukRadios ({
                     idPrefix: 'veranda-present',
                     name: 'veranda-present',
+                    classes: 'govuk-radios--inline',
                     fieldset: {
                         legend: {
                             text: 'Will the building have a veranda?',
@@ -49,7 +29,7 @@
                         }
                     },
                     hint: {
-                        html: hintHtml
+                        text: 'You do not have to add a veranda to the building for pullets'
                     },
                     items: [
                         {
@@ -57,7 +37,7 @@
                             value: 'Yes',
                             checked: true if data['veranda-present'] == 'Yes',
                             attributes: {
-                                'data-next': nextPageOnYes
+                                'data-next': 'pasture'
                             }
                         },
                         {
@@ -65,20 +45,9 @@
                             value: 'No',
                             checked: true if data['veranda-present'] == 'No',
                             attributes: {
-                                'data-next': nextPageOnNo
+                                'data-next': '../biosecurity/concrete-apron'
                             }
-                        },
-                        {
-                            divider: 'or'
-                        },
-                        {
-                            text: 'My building is exempt',
-                            value: 'My building is exempt',
-                            checked: true if data['veranda-present'] == 'My building is exempt',
-                             attributes: {
-                                'data-next': nextPageOnExempt
-                            }
-                        } 
+                        }
                     ]
                 }) }}
 
