--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -19,15 +19,15 @@
       </h1>
 
       <p>
-        Use this service to:
+        Use this service to check:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          check if you are eligible to apply for a grant for your project (takes about 5 minutes)
+          if you are eligible to apply for a grant for your project (takes about 15 minutes)
         </li>
         <li>
-          check how well your project fits the funding priorities (takes about 15 minutes if you have all the project details)
+          how your project scores against the grant funding priorities (takes about 15 minutes if you have all the project details)
         </li>
       </ul>
 
