--- a/app/views/layinghens/user-testing/likert-scale.html
+++ b/app/views/layinghens/user-testing/likert-scale.html
@@ -190,7 +190,7 @@
                 Links
             </h2>
 
-            <ul class="govuk-list">
+            <ol class="govuk-list govuk-list--number">
                 <li>
                     <a href="/layinghens/current/start-page?waitlist-enabled=false">
                         Start page
@@ -199,7 +199,7 @@
 
                 <li>
                     <a href="/layinghens/current/start-page?waitlist-enabled=true">
-                        Start page (waitlist enabled)
+                        Start page (w/e)
                     </a>
                 </li>
 
