--- a/app/views/layinghens/current/eligibility/funding/solar-cost.html
+++ b/app/views/layinghens/current/eligibility/funding/solar-cost.html
@@ -17,7 +17,7 @@
                 </h1>
 
                 <p class="govuk-hint">
-                    You can apply for up to 25% of the estimated costs of buying and installing a solar PV system which has a power capacity of up to 5kW per 1,000 bird
+                    You can apply for up to 25% of the estimated costs of buying and installing a solar PV system which has a power capacity of up to 5kW per 1,000 birds.
                 </p>
 
                 <p class="govuk-hint">
