--- a/app/views/layinghens/current/start-page.html
+++ b/app/views/layinghens/current/start-page.html
@@ -61,15 +61,14 @@
 
        <ul class="govuk-list govuk-list--bullet">
         <li>
-          refurbishing or replacing existing laying hen or pullet housing with new multi-tier aviary housing
-        </li>
+          refurbishing or replacing existing laying hen or pullet housing
         <li>
           adding a veranda to existing laying hen or pullet housing
         </li>
       </ul>
 
       <p>
-        If you are applying for housing grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of energy output per 1,000 birds. 
+        If you are applying for housing grant funding, you can apply for up to 25% of the estimated costs of buying and installing a solar PV system which produces up to 5 kilowatts (kW) of power capacity per 1,000 birds. 
       </p>
 
       <p>
