--- a/app/views/layinghens/current/eligibility/funding/energy-output.html
+++ b/app/views/layinghens/current/eligibility/funding/energy-output.html
@@ -17,7 +17,7 @@
                 </h1>
 
                 <p class="govuk-hint">
-                    This grant will fund a solar PV system that has a power capacity of up to 5kW per 1,000 birds
+                    This grant will fund a solar PV system that has a power capacity of up to 5kW per 1,000 birds.
                 </p>
 
                 <p class="govuk-hint">
