--- a/app/views/layinghens/current/eligibility/common/country.html
+++ b/app/views/layinghens/current/eligibility/common/country.html
@@ -63,7 +63,7 @@
                 <span class="app-step-nav-related__pretitle">Eligibility</span>
                 </h2>
                 <p>
-                    This grant is only for projects in England.
+                    This grant is only for projects in England
                 </p>
                 <p>
                     Scotland, Wales and Northern Ireland have other grants available.
