--- a/app/views/layinghens/index.html
+++ b/app/views/layinghens/index.html
@@ -2,6 +2,25 @@
 
 {% extends "slurry/current/views/layouts/_BASEFULL.html" %}
 
+{% set pageStructure = data.services['layinghens'].structure  %}
+
+{% macro renderStructure(structure) %}
+    <ul>
+        {% for name, page in structure %}
+            <li>
+                {% if page.type == 'page' %}
+                    <a href="{{ page.url }}">{{ page.name }}</a>
+                {% else %}
+                    {{ page.name }}
+                    {% if page.children %}
+                        {{ renderStructure(page.children) }}
+                    {% endif %}
+                {% endif %}
+            </li>
+        {% endfor %}
+    </ul>
+{% endmacro %}
+
 {% block service %}
 
 <!--
@@ -11,10 +30,10 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-<span class="govuk-caption-xl">Laying hens grant</span>
-<h1 class="govuk-heading-xl">
-  Laying hens prototype admin
-</h1>
+      <span class="govuk-caption-xl">Laying hens grant</span>
+      <h1 class="govuk-heading-xl">
+        Laying hens prototype admin
+      </h1>
 
       <div class="proto-admin">
         <h2 class="govuk-heading-l">User research</h2>
@@ -37,18 +56,24 @@
 
                       <p class='govuk-list app-list--definition'>
                         <a href='/layinghens/v1/start' class="govuk-link--no-visited-state">Round 1</a><br>
-                        Tested between 25 and 31 January 2024</p>
+                        Tested between 25 and 31 January 2024
                         </p>
 
                         <p class='govuk-list app-list--definition'>
                         <a href='/layinghens/v2/start' class="govuk-link--no-visited-state">Round 2</a><br>
-                        Tested between 23 and 26 February 2024</p>
+                        Tested between 23 and 26 February 2024
                         </p>
 
       </div>
-
-      
-   
+      </div>
+      <div class="govuk-grid-column-one-third">
+        <h2 class="govuk-heading-m">Page structure</h2>
+      {{ renderStructure(pageStructure) }}
+      </div>
+</div>
+<code>
+{{ pageStructure | dump }}
+</code>
 
 
 {% endblock %}
